Add item to list, and remove item from list

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
           </label>
         </div>
         <form class="panel__order order" novalidate>
-          <div class="order__total-price">
-            Razem:
-            <span class="order__total-price-value">199PLN</span>
-          </div>
+          <div class="order__total-price"></div>
           <div class="order__field">
             <label class="order__field-name">
               Imię i nazwisko: <input class="order__field-input" name="name" />
@@ -40,19 +37,9 @@
             />
           </div>
         </form>
-        <ul class="panel__summary summary">
-          <li class="summary__item summary__item--prototype">
-            <h3 class="summary__title">
-              <span class="summary__name">Ogrodzieniec</span>
-              <strong class="summary__total-price">199PLN</strong>
-              <a href="" class="summary__btn-remove" title="usuń">X</a>
-            </h3>
-            <p class="summary__prices">dorośli: 1 x 99PLN, dzieci: 2 x 50PLN</p>
-          </li>
-        </ul>
+        <ul class="panel__summary summary"></ul>
       </section>
     </section>
-
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
