--- a/index.html
+++ b/index.html
@@ -5,76 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript: Formularze - devmentor.pl</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+</style>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <section class="panel">
-      <ul class="panel__excursions excursions">
-          <!-- //////////////////////////////////////// -->
-        <li class="excursions__item excursions__item--prototype">
-          <header class="excursions__header">
-            <h2 class="excursions__title">Ogrodzieniec</h2>
-            <p class="excursions__description">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
-              aliquam quam laboriosam quaerat temporibus dicta vitae maxime!
-              Nemo, nobis veritatis?
-            </p>
-          </header>
-          <form class="excursions__form">
-            <div class="excursions__field">
-              <label class="excursions__field-name">
-                Dorosły: <span class="excursions__price">99</span>PLN x
-                <input class="excursions__field-input" name="adults" />
-              </label>
-            </div>
-            <div class="excursions__field">
-              <label class="excursions__field-name">
-                Dziecko: <span class="excursions__price">50</span>PLN x
-                <input class="excursions__field-input" name="children" />
-              </label>
-            </div>
-            <div class="excursions__field excursions__field--submit">
-              <input
-                class="excursions__field-input excursions__field-input--submit"
-                value="dodaj do zamówinia"
-                type="submit"
-              />
-            </div>
-          </form>
-        </li>
-        <li class="excursions__item excursions__item--prototype">
-          <header class="excursions__header">
-            <h2 class="excursions__title">Ogrodzieniec</h2>
-            <p class="excursions__description">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
-              aliquam quam laboriosam quaerat temporibus dicta vitae maxime!
-              Nemo, nobis veritatis?
-            </p>
-          </header>
-          <form class="excursions__form">
-            <div class="excursions__field">
-              <label class="excursions__field-name">
-                Dorosły: <span class="excursions__price">99</span>PLN x
-                <input class="excursions__field-input" name="adults" />
-              </label>
-            </div>
-            <div class="excursions__field">
-              <label class="excursions__field-name">
-                Dziecko: <span class="excursions__price">50</span>PLN x
-                <input class="excursions__field-input" name="children" />
-              </label>
-            </div>
-            <div class="excursions__field excursions__field--submit">
-              <input
-                class="excursions__field-input excursions__field-input--submit"
-                value="dodaj do zamówinia"
-                type="submit"
-              />
-            </div>
-          </form>
-        </li>
-          <!-- //////////////////////////////////////// -->
-      </ul>
+      <ul class="panel__excursions excursions"></ul>
       <section class="panel__form">
         <div class="panel__uploader uploader">
           <label class="uploader__label">
@@ -83,20 +21,12 @@
           </label>
         </div>
         <form class="panel__order order" novalidate>
-          <div class="order__total-price">
-          <!-- //////////////////////////////////////// -->
-
-                        Razem:
-            <span class="order__total-price-value">199PLN</span>
-          <!-- //////////////////////////////////////// -->
-
-          </div>
+          <div class="order__total-price"></div>
           </div>
           <div class="order__field">
             <label class="order__field-name">
               Imię i nazwisko <input class="order__field-input" name="name" />
             </label>
-            
           </div>
           <div class="order__field">
             <label class="order__field-name">
@@ -112,35 +42,7 @@
             <ul class="order__errors-list"></ul>
           </div>
         </form>
-        <ul class="panel__summary summary">
-          <!-- //////////////////////////////////////// -->
-           <li class="summary__item summary__item--prototype">
-            <h3 class="summary__title">
-              <span class="summary__name">Ogrodzieniec</span>
-              <strong class="summary__total-price">199PLN</strong>
-              <a href="" class="summary__btn-remove" title="usuń">X</a>
-            </h3>
-            <p class="summary__prices">dorośli: 1 x 99PLN, dzieci: 2 x 50PLN</p>
-          </li>
-           <li class="summary__item summary__item--prototype">
-            <h3 class="summary__title">
-              <span class="summary__name">Ogrodzieniec</span>
-              <strong class="summary__total-price">199PLN</strong>
-              <a href="" class="summary__btn-remove" title="usuń">X</a>
-            </h3>
-            <p class="summary__prices">dorośli: 1 x 99PLN, dzieci: 2 x 50PLN</p>
-          </li>
-           <li class="summary__item summary__item--prototype">
-            <h3 class="summary__title">
-              <span class="summary__name">Ogrodzieniec</span>
-              <strong class="summary__total-price">199PLN</strong>
-              <a href="" class="summary__btn-remove" title="usuń">X</a>
-            </h3>
-            <p class="summary__prices">dorośli: 1 x 99PLN, dzieci: 2 x 50PLN</p>
-          </li>
-          <!-- //////////////////////////////////////// -->
-
-        </ul>
+        <ul class="panel__summary summary"></ul>
       </section>
     </section>
     <script src="./assets/js/script.js"></script>
